--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ibmiotf": "^0.2.41",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "ibmiotf": "*"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
